feat: change symbol to id in token/{id}/stats endpoint
